--- a/package.json
+++ b/package.json
@@ -5,38 +5,67 @@
   "main": "src/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc && npm run build:contracts",
+    "build": "tsc && npm run build:contracts && npm run build:circuits",
     "build:contracts": "sui move build",
+    "build:circuits": "node src/circuits/build-circuits.js",
     "test": "jest",
+    "test:unit": "jest --testPathPattern=tests/unit",
+    "test:integration": "jest --testPathPattern=tests/integration",
+    "test:e2e": "jest --testPathPattern=tests/e2e",
+    "test:all": "jest --testPathPattern=\"(unit|integration|e2e)\"",
     "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --ci --coverage --maxWorkers=2",
+    "test:zk": "ts-node src/zk/test-examples.ts",
     "lint": "eslint src/**/*.ts",
     "typecheck": "tsc --noEmit",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start": "node src/index.js",
-    "demo": "node src/demo/security-demo.js"
+    "dev": "ts-node-dev --respawn --transpile-only src/production-server.ts",
+    "start": "node dist/production-server.js",
+    "serve": "ts-node src/production-server.ts",
+    "zk:api": "ts-node src/zk/zk-api-server.ts",
+    "demo": "ts-node src/simple-demo.ts",
+    "demo:original": "node src/demo/security-demo.js",
+    "demo:zk": "ts-node src/demo-zk-proofs.ts",
+    "demo:zk:tests": "ts-node src/zk/test-examples.ts",
+    "demo:blockchain": "ts-node src/blockchain/blockchain-verification.ts",
+    "server:blockchain": "ts-node src/blockchain/blockchain-api-server.ts"
   },
   "dependencies": {
+    "@mysten/bcs": "^1.9.2",
+    "@mysten/seal": "^0.9.3",
     "@mysten/sui.js": "^0.50.0",
-    "express": "^4.18.2",
+    "@mysten/utils": "^0.2.0",
+    "@mysten/walrus": "^0.8.3",
+    "@types/cors": "^2.8.19",
+    "axios": "^1.13.2",
+    "bcrypt": "^5.1.1",
+    "circomlibjs": "^0.1.7",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "helmet": "^7.0.0",
-    "rate-limiter-flexible": "^3.0.1",
-    "winston": "^3.10.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
+    "ml-matrix": "^6.12.1",
+    "ml-regression": "^6.3.0",
+    "node-forge": "^1.3.1",
+    "rate-limiter-flexible": "^3.0.1",
+    "snarkjs": "^0.7.5",
     "uuid": "^9.0.0",
-    "dotenv": "^16.3.1"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@types/node": "^20.5.0",
-    "@types/express": "^4.17.17",
     "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/uuid": "^9.0.2",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.5.0",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
+    "circomlib": "^2.0.5",
     "eslint": "^8.47.0",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
@@ -57,6 +86,5 @@
   "license": "MIT",
   "directories": {
     "test": "tests"
-  },
-  "type": "module"
+  }
 }
